--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,3 +31,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 }
+dependencies {
+
+    compile 'com.github.joielechong:countrycodepicker:2.1.5'
+}
