--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login" ></activity>
+        <activity android:name=".Farm"></activity>
+        <activity android:name=".Login" />
         <activity android:name=".SignUp" />
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
         <activity android:name=".CassavaFarms">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
