--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
 }
 dependencies {
 
+
+    implementation 'com.google.android.material:material:1.1.0'
     compile 'com.github.joielechong:countrycodepicker:2.1.5'
 }
