--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.materialdesign">
+    package="com.example.materialdesign" >
 
     <application
         android:allowBackup="true"
@@ -8,12 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Login" ></activity>
+        android:theme="@style/AppTheme" >
+        <activity android:name=".FarmSecondPage" >
+        </activity>
+        <activity android:name=".Login" />
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".CassavaFarms"/>
-        <activity android:name=".Farm">
+        <activity android:name=".Farm" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
