--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".FarmSecondPage" >
-        </activity>
-        <activity android:name=".Login" />
+
+        <activity android:name=".Login"> </activity>
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".Farm" >
+        <activity android:name=".Farm"/>
+        <activity android:name=".FarmSecondPage" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
